--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -24,7 +24,7 @@
 .theme-dark .friends-table, .theme-dark .messagesWrapper-3lZDfY,
 .theme-dark .members-1998pB,
 .theme-dark .container-3gCOGc,
-.theme-dark .headerBar-UHpsPw,
+.theme-dark .container-1r6BKw,
 .theme-dark .standardSidebarView-3F1I7i,
 .theme-dark .attachButtonDivider-3Glu60 {
     background-color: transparent;
@@ -35,31 +35,10 @@
 }
 /* Transparency Spot */
 /* Main Chat Spot */
-.avatarSpeaking-1wJCNq {
+.avatarSpeaking-3MqCHL {
     box-shadow: inset 3px 2px 6px rgba(255,255,255,0.7), inset 0px 0px 6px rgba(255,255,255,0.3);
 }
-.theme-dark .selected-nT-gM3:before,
-.guild-1EfMGQ.selected.unread-qLkInr:before {
-    background: transparent;
-    border-radius: 30px;
-    box-shadow: inset 3px 6px 6px rgba(255,255,255,0.97), inset 0 0 123px rgba(255,255,255,0.47);
-    height: 25px !important;
-    width: 25px !important;
-    left: 31px !important;
-    margin-top: -32px !important;
-    z-index: 1;
-}
 
-.theme-dark .unread-2OHH1w:before {
-    background: transparent;
-    border-radius: 30px;
-    height: 15px;
-    width: 15px;
-    left: 36px;
-    margin-top: -26px;
-    z-index: 1;
-    box-shadow: inset 3px 6px 6px rgba(255,255,255,0.87), inset 0 0 123px rgba(255,255,255,0.47);
-}
 .containerCozy-jafyvG {
     box-shadow: inset 5px 4px 6px rgba(255,255,255,0.37), inset 0 0 123px rgba(255,255,255,0.47);
     margin-bottom: 13px;
@@ -104,23 +83,27 @@
 .inner-btChU7 .channel-SEolQq {
     opacity: .8;
 }
-.content-20Aix8 {
+.content-3at_AU {
     border-radius: 30px;
     overflow: visible;
     box-shadow: inset 4px 5px 6px rgba(255,255,255,0.3);
 }
-.unread-1Dp-OI {
+.unread-3zKkbm {
     display: none;
 }
-.badge,
+.numberBadge-2s8kKX[style*="background-color: rgb(240, 71, 71);"],
 .wrapper-232cHJ {
-    background-color: #E7FEFF;
+    background-color: #E7FEFF !important;
     border-radius: 30px;
     box-shadow: inset 3px 5px 6px rgba(0,0,0,0.8);
-    padding: 5px 9px;
+    padding: 5px 3px;
     text-shadow: 0 0 6px rgba(0,0,0,1), 0 0 6px rgba(0,0,0,1);
 }
-.theme-dark .wrapper-2lTRaf {
+.base-PmTxvP {
+        margin-right: -4px;
+        min-width: 26px;
+}
+.theme-dark .wrapper-25eVIn {
     background: transparent !important;
     border-radius: 25px !important;
 }
@@ -153,57 +136,37 @@
 .unreadBar-3YD_k9 {
     display: none;
 }
-.colorConnectedText-1c_uzY, 
-.colorConnectedVoice-3kyvUN, 
-.colorDefaultText-oas-QM, 
-.colorDefaultVoice-3wYlhb, 
-.colorHoveredText-OZnAgu, 
-.colorHoveredVoice-1kucsK, 
-.colorLockedText-1VRkPt, 
-.colorLockedVoice-2UlBjl, 
-.colorSelectedText-1y4Wvs, 
-.colorSelectedVoice-Xcb_9R, 
-.colorUnreadText-2t7XRb, 
-.colorUnreadVoice-137o4S,
-.colorMutedText-36M8WR, 
-.colorMutedVoice-3ghIuw,
 .icon-3nr6O-,
 .icon-29PTzq  {
     color: white;
     opacity: 1;
 }
-.contentUnreadText-2vNnZc, 
-.contentUnreadVoice-1dijOt {
+.theme-dark .wrapper-1ucjTd.modeUnread-1zpFdA .content-3at_AU {
    background-color: rgba(231, 254, 255,0.2);  /* (Main Color, 0.2) */
 }
-.contentConnectedVoice-qL-YrL:active, 
-.contentHoveredText-2D9B-x, 
-.contentHoveredVoice-3p_NEO:active, 
-.contentSelectedVoice-1WDIBM:active {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background-color: rgba(206, 233, 234,0.5); /* (Hover Color, 0.6) */
     margin-left: 15px;
 }
-.contentHoveredText-2D9B-x:active {
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU, .theme-dark .listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh:active {
   background-color: rgba(206, 233, 234,0.5);
   border: 1px solid rgba(255,255,255,0.3);
 }
-.name-3M0b8v {
+.name-IbjUBS {
     font-size: 12px;
     font-weight: normal;
     text-transform: capitalize;
     color: white;
 }
-.contentSelectedText-3wUhMi, 
-.contentSelectedVoice-1WDIBM {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
     background-color: rgba(231, 254, 255,0.7);  /* (Main Color, 0.7) */
     box-shadow: inset 0 0 26px black;
 }
-.nameCollapsed-34uFWo, 
-.nameDefault-2DI02H, 
-.nameHovered-1gxhWH, 
-.nameHoveredCollapsed-2orEWB, 
-.nameMuted-1MCOt4, 
-.nameUnread-njOjIS {
+.wrapper-CU3qI5.collapsed-4WdoJ7, 
+.wrapper-CU3qI5, 
+.wrapper-CU3qI5:hover, 
+.wrapper-CU3qI5.collapsed-4WdoJ7:hover, 
+.muted-1NRuDm {
     font-size: 14px;
     font-weight: 500;
     text-align: center;
@@ -219,25 +182,18 @@
     border: 1px solid rgba(255,0,0,0.42);
     border-radius: 30px;
 }
-.nameHovered-1gxhWH, 
-.nameHoveredCollapsed-2orEWB {
+.wrapper-CU3qI5:hover, 
+.wrapper-CU3qI5.collapsed-4WdoJ7:hover {
     background-color: rgba(206, 233, 234,0.6); /* (Hover Color, 0.6) */
 }
-.nameCollapsed-34uFWo, 
-.nameDefault-2DI02H {
+.wrapper-CU3qI5.collapsed-4WdoJ7, 
+.wrapper-CU3qI5 {
     background-color: rgba(231, 254, 255,0.4);  /* (Main Color, 0.7) */
 }
-.nameMuted-1MCOt4 {
+.muted-1NRuDm {
     background-color: rgba(231, 254, 255,0.2);  /* (Main Color, 0.7) */
 }
-.iconCollapsed-3hFp_8, 
-.iconDefault-3Gr8d2, 
-.iconHovered-2L3-fB, 
-.iconHoveredCollapsed-3caIIZ, 
-.iconMuted-1HVBGH, 
-.iconUnread-2eGkvX {
-    display: none;
-}
+
 .theme-dark .guildsError-b7zR5H:hover {
     background-color: rgba(206, 233, 234,0.4); 
     color: black;
@@ -249,7 +205,7 @@
     font-size: 30px;
     font-weight: normal;
 }
-.tooltip-1OS-Ti.black-2bmmnj.tooltip-1OS-Ti {
+.tooltip-2QfLtc.tooltipBlack-PPG47z.tooltip-2QfLtc {
     background-color: transparent;
     border-radius: 30px;
     color: white;
@@ -279,20 +235,11 @@
 .newMessagesBar-mujexs button {
     color: white !important;
 }
-.tooltip-1OS-Ti.red-m6f4-H.right-KM_vfY:after {
+.theme-dark .tooltipRed-8-9NeP .tooltipPointer-3ZfirK {
     border-right: none;
 }
-.tooltip-1OS-Ti.black-2bmmnj.top-1pTh1F:after {
-    border-top: none;
-}
-.tooltip-1OS-Ti.black-2bmmnj.bottom-19kp6S:after {
-    border-bottom: none;
-}
-.tooltip-1OS-Ti.black-2bmmnj.left-1wV7VO:after {
-    border-left: none;
-}
-.tooltip-1OS-Ti.black-2bmmnj.right-KM_vfY:after {
-    border-right: none;
+.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+     border: none;
 }
 .video-1FfuMD,
 .theme-dark .private-channel-call {
@@ -362,7 +309,7 @@
 .theme-dark .divider-3gKybi:before {
      background: transparent;
 }
-.theme-dark .iconBadge-2dji3k {
+.theme-dark .iconBadge-qZ4Ksk {
     border-color: transparent;
     background-color: #E7FEFF;
     width: 4px; 
@@ -416,7 +363,7 @@
 .theme-dark .dividerEnabled-2TTlcf {
     border-bottom-color: transparent;
 }
-.tooltip-1OS-Ti.red-m6f4-H {
+.theme-dark .tooltipRed-8-9NeP {
     background-color: rgba(231, 254, 255,.4) !important; /* (Main Color, .4) */
     color: black;
 }
@@ -613,7 +560,7 @@ a {
 .theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(231, 254, 255,.5) /* (Main Color, .5) */;
 }
-.wrapper-2NJDcI {
+.users-i_3-kL, .total-3tKGEB {
     background-color: #E7FEFF;
     border-radius: 30px;
     color: black;
@@ -661,10 +608,10 @@ a {
     margin-left: -6px;
 }
 /* Friends and DMs */
-.theme-dark .guildSeparator-3s64Iy:after {
+.guildSeparator-3s64Iy {
     display: none;
 }
-.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW,
+
 .theme-dark .emptyStateNote-ZYTetQ {
     color: white;
 }
@@ -716,7 +663,7 @@ a {
     box-shadow: inset 0 0 7px rgba(255,255,255,0.6);
 }
 .channel-2QD9_O.selected-1HYmZZ a,
-.theme-dark .topPill-30KHOu .itemSelected-1qLhcL {
+.theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover {
     background-color: rgba(206, 233, 234,.6) /* (Hover Color, .6) */;
     border-radius: 20px;
     color: #fff;
@@ -998,7 +945,7 @@ a {
     background-color: rgba(255,0,0,1) !important;
     color: #fff !important;
 }
-.theme-dark .divider-3573oO {
+.theme-dark .divider-3FBTu8 {
     background-color: transparent;
 }
 .theme-dark .multiInputLast-1aQ3YA:before {
@@ -1918,7 +1865,7 @@ a {
     padding: 3px 7px;
     text-shadow: 0 0 6px rgba(0,0,0,1), 0 0 6px rgba(0,0,0,1);
 }
-.theme-dark .topPill-30KHOu .itemSelected-1qLhcL .badge {
+.theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover .badge {
     background-color: rgba(231, 254, 255,.8);
     color: #fff;
     border-radius: 30px;
@@ -2052,3 +1999,6 @@ a {
 }
 
 /* --- */
+.theme-dark .button-OhfaWu {
+     background-color: transparent !important;
+}
