--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -32,7 +32,7 @@
 }
 
 .theme-dark .title-3qD0b-,
-.theme-dark .headerBar-UHpsPw,
+.theme-dark .container-1r6BKw,
 .header-2o-2hj {
         background: black;
         box-shadow: none;
@@ -82,7 +82,7 @@
     font-size: 29px;
     font-weight: 400;
 }
-.tooltip-1OS-Ti.red-m6f4-H {
+.theme-dark .tooltipRed-8-9NeP {
     background-color: black;
     color: white;
 }
@@ -227,7 +227,7 @@
 .theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
-.avatarSpeaking-1wJCNq {
+.avatarSpeaking-3MqCHL {
     box-shadow: 0 0 0 2px #A87E56, inset 0 0 0 2px black;
 }
 a,
@@ -248,7 +248,7 @@ a,
 .theme-dark .username-_4ZSMR {
     margin-left: 20px;
 }
-.theme-dark .iconBadge-2dji3k {
+.theme-dark .iconBadge-qZ4Ksk {
     border: 1px solid black;
     background-color: #705435;
     border-radius: 50px;
@@ -269,9 +269,7 @@ a,
     background-color: rgba(168, 126, 86,0.28);
     color: #EFD9C3;
 }
-.contentHoveredText-2D9B-x, 
-.contentHoveredVoice-3p_NEO:active, 
-.contentSelectedVoice-1WDIBM:active {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU:active {
     background-color: rgba(168, 126, 86,0.28);
 }
 
@@ -301,22 +299,11 @@ a,
     left: -27px;
     position: relative;
 }
-.contentSelectedText-3wUhMi {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
     background-color: rgba(168, 126, 86,.6);
     border-radius: 50px;
 }
-.colorSelectedText-1y4Wvs, 
-.colorSelectedVoice-Xcb_9R {
-   color: white;
-   opacity: 1;
-}
-.nameSelectedText-sp_EUw, 
-.nameSelectedVoice-1qSph5 {
-    color: white;
-    text-shadow: 0 0 5px black;
-    padding: 0 6px;
-    text-decoration: underline;
-}
+
 .avatar-16XVId .mask-3OgeRz {
     -webkit-mask: none;
     mask: none;
@@ -326,8 +313,8 @@ a,
 ::-webkit-input-placeholder,
 .iconCollapsed-3hFp_8, 
 .iconDefault-3Gr8d2, 
-.nameCollapsed-34uFWo, 
-.nameDefault-2DI02H,
+.wrapper-CU3qI5.collapsed-4WdoJ7, 
+.wrapper-CU3qI5,
 .theme-dark .topic-1KFf6J {
   color: #EFD9C3 !important;
   text-transform: capitalize;
@@ -363,17 +350,14 @@ a,
 .channelName-1G03vu svg {
     display: none;
 }
-.nameHovered-1gxhWH, 
-.nameHoveredCollapsed-2orEWB,
+.wrapper-CU3qI5:hover, 
+.wrapper-CU3qI5.collapsed-4WdoJ7:hover,
 .iconHovered-2L3-fB, 
 .iconHoveredCollapsed-3caIIZ {
     text-transform: capitalize;
     color: #A87E56;
 }
-.iconMuted-1HVBGH, 
-.iconUnread-3sxnnr,
-.nameMuted-1MCOt4, 
-.nameUnread-njOjIS {
+.muted-1NRuDm {
     text-transform: capitalize;
     color: white;
     text-shadow: 0 0 4px red;
@@ -453,14 +437,7 @@ a,
     background: #705435;
     color: #fff;
 }
-.theme-dark .unread-2OHH1w:before {
-    background: silver;
-    border-radius: 0px;
-}
-.theme-dark .selected-nT-gM3:before {
-    background: #EFD9C3;
-    border-radius: 0px;
-}
+
 /* Duration Bar */
 .mediaBarGrabber-1FqnbN, .mediaBarProgress-1xaPtl, 
 .mediaBarProgress-1xaPtl:after, 
@@ -502,8 +479,12 @@ a,
     border-radius: 0px;
     color: #fff;
 }
-.badge {
-    background-color: #705435;
+.base-PmTxvP {
+        margin-right: -5px;
+        min-width: 26px;
+}
+.numberBadge-2s8kKX[style*="background-color: rgb(240, 71, 71);"] {
+    background-color: #705435 !important;
     border-radius: 0px;
     box-shadow: none;
     color: #fff;
@@ -600,7 +581,7 @@ a,
  .theme-dark .hljs-strong {
     font-weight: bold;
   }
-.tooltip-1OS-Ti.red-m6f4-H {
+.theme-dark .tooltipRed-8-9NeP {
     width:140px;
   color: #FFFFFF;
   background: red;
@@ -609,7 +590,7 @@ a,
   text-align: center;
   border-radius: 4px;
 }
-.tooltip-1OS-Ti.black-2bmmnj {
+.tooltip-2QfLtc.tooltipBlack-PPG47z {
    width:140px;
   color: #FFFFFF;
   background: #000000;
@@ -617,20 +598,11 @@ a,
   line-height: 13px;
   border-radius: 4px;
 }
-.tooltip-1OS-Ti.red-m6f4-H.right-KM_vfY:after {
+.theme-dark .tooltipRed-8-9NeP .tooltipPointer-3ZfirK {
     border-right: none;
 }
-.tooltip-1OS-Ti.black-2bmmnj.top-1pTh1F:after {
-    border-top: none;
-}
-.tooltip-1OS-Ti.black-2bmmnj.right-KM_vfY:after {
-    border-right: none;
-}
-.tooltip-1OS-Ti.black-2bmmnj.bottom-19kp6S:after {
-    border-bottom: none;
-}
-.tooltip-1OS-Ti.black-2bmmnj.left-1wV7VO:after {
-    border-left: none;
+.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+    border: none;
 }
 /* Discord Settings */
 .theme-dark .accountBtnInner-sj5jLs {
@@ -716,7 +688,7 @@ a,
 }
 .theme-dark .separator-3z7STW,
 #bd-settings-sidebar .ui-tab-bar-separator,
-.theme-dark .divider-3573oO {
+.theme-dark .divider-3FBTu8 {
     display: none;
 }
 .side-8zPYf6 .itemSelected-1qLhcL,
@@ -896,7 +868,7 @@ a,
     background-color: rgba(112, 84, 53, 0.6);
     color: white !important;
 }
-.theme-dark .topPill-30KHOu .itemSelected-1qLhcL .badge {
+.theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover .badge {
     background-color: #A87E56;
     color: #fff;
 }
@@ -928,7 +900,7 @@ a,
 }
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA,
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA,
-.theme-dark .guildSeparator-3s64Iy:after,
+.guildSeparator-3s64Iy,
 .theme-dark .keybindShortcutTipsSelect-HDyfe8:last-of-type:before {
     background: none;
 }
@@ -940,7 +912,6 @@ a,
 .friendsTable-133bsv .friendsRow-2yicud .friendsColumnStatus-ZH4ho2 .statusText-2F9zIF,
 .theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ,
 .friendsTable-133bsv .friendsRow-2yicud .discord-tag .username,
-.theme-dark .friendsOnline-2JkivW, .theme-light .friendsOnline-2JkivW,
 .theme-dark .emptyStateNote-ZYTetQ,
 .theme-dark .contentDefault-16dKSY .note-1VhFgQ,
 .misc-1CT3G7,
@@ -955,11 +926,11 @@ a,
     color: white;
     opacity: 0.7;
 }
-.theme-dark .wrapper-2lTRaf {
+.theme-dark .wrapper-25eVIn {
     background: #705435 !important;
     border-radius: 50px !important;
 }
-.theme-dark .wrapper-1Rf91z .guilds .friends-icon {
+.theme-dark .wrapper-25eVIn .guilds .friends-icon {
     background-image: url(/assets/89576a4bb71f927eb20e8aef987b499b.svg);
     background-position: 50%;
     background-repeat: no-repeat;
@@ -967,7 +938,7 @@ a,
     height: 50px;
     width: 50px;
 }
-.theme-dark .wrapper-1Rf91z .guilds .friends-icon:hover {
+.theme-dark .wrapper-25eVIn .guilds .friends-icon:hover {
     background-image: url(/assets/89576a4bb71f927eb20e8aef987b499b.svg);
     background-position: 50%;
     background-repeat: no-repeat;
@@ -1012,7 +983,7 @@ a,
     border: 2px solid black;
     color: white  !important;
 }
-.theme-dark .topPill-30KHOu .itemSelected-1qLhcL {
+.theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover {
     background-color: #705435;
     border: 1px solid #A87E56;
     color: white;
@@ -1838,4 +1809,8 @@ a,
 .theme-dark .queryContainer-RKFJW- {
     border-bottom-color: transparent;
     color: white
+}
+
+.theme-dark .button-OhfaWu {
+     background-color: transparent !important;
 }
