--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -6,12 +6,12 @@
 }
 
 .theme-dark .title-3qD0b-,
-.theme-dark .headerBar-UHpsPw {
+.theme-dark .container-1r6BKw {
    background: rgba(0, 0, 0, 0.4);
 }
 
 .typeMacOS-3EmCyP,
-.searchBar-6Kv8R2,
+.darkTheme-3uETC4.container-2XeR5Z,
 .header-2o-2hj {
    background: rgba(0, 0, 0, 0.4);
 }
@@ -67,98 +67,51 @@
    width: 100%;
 }
 
-.theme-dark .wrapper-1Rf91z {
+.theme-dark .wrapper-25eVIn {
    border-radius: 0;
 }
 
-.theme-dark .unread-2OHH1w:before {
-   background: rgba(255, 255, 255, 0.33);
-   background-image: url(https://cdn4.iconfinder.com/data/icons/weather-29/256/snowflake-512.png);
-   border: 1px solid rgba(255, 255, 255, 0.35);
-   background-size: cover;
-}
 
-.theme-dark .selected-nT-gM3:before {
-   border: 3px solid rgba(255, 255, 255, 0.44);
-}
-
-.theme-dark .guild-1EfMGQ .guildIcon-CT-ZDq {
+.theme-dark .icon-27yU2q {
    background-color: transparent;
 }
 
-.guild-1EfMGQ .guildIcon-CT-ZDq {
+.icon-27yU2q {
    opacity: .6;
    transition: opacity .2s linear;
    border-radius: 50px;
 }
 
-.guild-1EfMGQ .guildIcon-CT-ZDq:hover {
+.icon-27yU2q:hover {
    opacity: .9;
 }
 
-.selected-nT-gM3:before {
-   border-radius: 50px;
-   height: 20px;
-   width: 20px;
-   margin-top: -10px;
-}
 
-.guild-1EfMGQ.unread-qLkInr:not(.selected-ML3OIq):before {
-   border-radius: 50px;
-   height: 20px;
-   width: 20px;
-   margin-top: -10px;
-}
-
-.unread-2OHH1w:before {
-   left: -3px;
-   z-index: 1;
-   top: 7px;
-   position: absolute;
-}
-
-.theme-dark .selected-nT-gM3:before {
-   background: rgba(255, 255, 255, 0.33);
-   z-index: 1;
-   top: 7px;
-   left: -3px;
-   background-image: url(https://cdn4.iconfinder.com/data/icons/weather-29/256/snowflake-512.png);
-   background-size: cover;
-}
-
-.guild-1EfMGQ.unread-qLkInr:hover:before {
-   border: 2px solid rgba(255, 255, 255, 0.44) !important;
-   background-color: rgba(255, 255, 255, 0.54);
-}
-
-.theme-dark .wrapper-2lTRaf {
+.theme-dark .wrapper-25eVIn {
    background: transparent !important;
 }
 
-.wrapper-2lTRaf {
+.wrapper-25eVIn {
    border-radius: 25px !important;
    cursor: pointer;
    font-size: 14px;
 }
 
-.theme-dark .guildSeparator-3s64Iy:after {
+.guildSeparator-3s64Iy {
    background: transparent;
 }
 
-.theme-dark .friendsOnline-2JkivW {
-   color: white;
-}
+
 
 .header-2o-2hj:hover {
    background-color: rgba(0, 0, 0, .7);
 }
 
-.nameCollapsed-34uFWo,
-.nameDefault-2DI02H,
-.nameHovered-1gxhWH,
-.nameHoveredCollapsed-2orEWB,
-.nameMuted-1MCOt4,
-.nameUnread-njOjIS {
+.wrapper-CU3qI5.collapsed-4WdoJ7,
+.wrapper-CU3qI5,
+.wrapper-CU3qI5:hover,
+.wrapper-CU3qI5.collapsed-4WdoJ7:hover,
+.muted-1NRuDm {
    font-size: 12px;
    font-weight: 500;
    text-transform: capitalize;
@@ -166,7 +119,7 @@
    text-shadow: 0 0 4px black;
 }
 
-.nameCollapsed-34uFWo {
+.wrapper-CU3qI5.collapsed-4WdoJ7 {
    color: white;
    background-color: #9A9A9A;
 }
@@ -175,12 +128,12 @@
     color: black;
 }
 
-.nameDefault-2DI02H {
+.wrapper-CU3qI5 {
    background-color: #E1E1E1;
    color: white;
 }
 
-.nameHovered-1gxhWH {
+.wrapper-CU3qI5:hover {
    color: white;
    background-color: #E1E1E1;
    border-left: 2px solid rgba(255, 0, 0, 0.54);
@@ -188,7 +141,7 @@
    border-top: 2px solid rgba(255, 0, 0, 0.54);
 }
 
-.nameHoveredCollapsed-2orEWB {
+.wrapper-CU3qI5.collapsed-4WdoJ7:hover {
    color: white;
    background-color: #9A9A9A;
    border-left: 2px solid rgba(255, 0, 0, 0.54);
@@ -196,24 +149,11 @@
    border-top: 2px solid rgba(255, 0, 0, 0.54);
 }
 
-.nameMuted-1MCOt4 {
+.muted-1NRuDm {
    color: white;
    background-color: #EA2525;
 }
 
-.nameUnread-njOjIS {
-   color: white;
-   background-color: #25C1EA;
-}
-
-.iconCollapsed-3hFp_8,
-.iconDefault-3Gr8d2,
-.iconHovered-2L3-fB,
-.iconHoveredCollapsed-3caIIZ,
-.iconMuted-1HVBGH,
-.iconUnread-2eGkvX {
-   display: none;
-}
 
 .unreadBar-3YD_k9 {
    box-shadow: none;
@@ -340,20 +280,18 @@
    font-weight: 400;
 }
 
-.theme-dark .guild-1EfMGQ.audio-3vVhBi .guildInner-3DSoA4:after,
-.theme-dark .guild-1EfMGQ.video-15yGu3 .guildInner-3DSoA4:after {
+.theme-dark .iconBadge-qZ4Ksk {
    background-color: rgba(255, 255, 255, 0.43);
 }
 
-.avatarSpeaking-1wJCNq {
+.avatarSpeaking-3MqCHL {
    box-shadow: 0 0 0 2px #42F133, inset 0 0 0 1.5px black;
 }
 
 .theme-dark .status-2kJpnA {
    border: none;
-   width: 23px;
-   height: 23px;
-   right: 6px;
+   width: 19px;
+   height: 19px;
    border-radius: 50%;
    background-image: url(http://icons.iconarchive.com/icons/icons8/windows-8/512/Astrology-Winter-icon.png);
    background-size: 17px 17px;
@@ -496,7 +434,7 @@
    color: white;
 }
 
-.theme-dark .divider-3573oO {
+.theme-dark .divider-3FBTu8 {
    background-color: transparent;
 }
 
@@ -600,10 +538,15 @@
    opacity: .9;
 }
 
-#friends .tab-bar-item .wrapper-232cHJ {
-   padding: 6px 8px;
+.base-PmTxvP {
+        margin-right: -5px;
+        min-width: 26px;
+}
+#friends .tab-bar-item .wrapper-232cHJ,
+.numberBadge-2s8kKX[style*="background-color: rgb(240, 71, 71);"] {
+   padding: 4px 3px;
    border-radius: 50px;
-   background-color: rgba(255, 255, 255, 0.45);
+   background-color: rgba(255, 255, 255, 0.45) !important;
    color: black;
    box-shadow: none;
    font-size: 14px;
@@ -620,7 +563,7 @@
    font-weight: 600;
 }
 
-.content-20Aix8 .wrapper-232cHJ {
+.content-3at_AU .wrapper-232cHJ {
    padding: 6px 9px;
    border-radius: 50px;
    background-color: rgba(255, 255, 255, 0.45);
@@ -667,13 +610,12 @@
    font-weight: 700;
 }
 
-.tooltip-1OS-Ti.black-2bmmnj {
+.tooltip-2QfLtc.tooltipBlack-PPG47z {
    background: linear-gradient(155deg, #000000, #D3D3D3);
    /*Primary Color*/
 }
 
-.tooltip-1OS-Ti {
-   position: absolute;
+.tooltip-2QfLtc {
    text-align: center;
    color: white;
    border: 2px solid rgba(255, 255, 255, 0.42);
@@ -681,28 +623,16 @@
    text-shadow: rgba(0, 0, 0, 0.69) 1px 1px 5px;
 }
 
-.tooltip-1OS-Ti.red-m6f4-H.tooltip-1OS-Ti {
+.theme-dark .tooltipRed-8-9NeP.tooltip-2QfLtc {
    background-color: rgba(255, 0, 0, 0.72);
 }
 
-.tooltip-1OS-Ti.red-m6f4-H.right-KM_vfY:after {
+.theme-dark .tooltipRed-8-9NeP .tooltipPointer-3ZfirK {
    border-right: none;
 }
 
-.tooltip-1OS-Ti.black-2bmmnj.top-1pTh1F:after {
-   border-top: none;
-}
-
-.tooltip-1OS-Ti.black-2bmmnj.bottom-19kp6S:after {
-   border-bottom: none;
-}
-
-.tooltip-1OS-Ti.black-2bmmnj.left-1wV7VO:after {
-   border-left: none;
-}
-
-.tooltip-1OS-Ti.black-2bmmnj.right-KM_vfY:after {
-   border-right: none;
+.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+    border: none;
 }
 
 .theme-dark .circleIconButton-jET_ig:hover {
@@ -727,85 +657,49 @@
 
 
 
-.unread-1Dp-OI {
+.unread-3zKkbm {
     display: none;
 }
 
-.nameUnreadText-DfkrI4, 
-.nameUnreadVoice-EVo-wI,
-.nameHoveredText-1uO31y, 
-.nameHoveredVoice-YJ1Vfd,
-.nameDefaultText-24KCy5, 
-.nameDefaultVoice-3WUH7s {
+.theme-dark .wrapper-1ucjTd.modeUnread-1zpFdA .name-3_Dsmg,
+.theme-dark .wrapper-1ucjTd:hover .name-3_Dsmg {
     color: white;
 }
-
-.nameLockedText-3pqQcL, 
-.nameLockedVoice-26MhB1 {
-    color: #DC1414;
-    font-size: 14px;
-    font-weight: 300;
-}
-
-.colorMutedText-36M8WR, 
-.colorMutedVoice-3ghIuw {
-    color: #4f545c;
-}
-
-.foreground-2W-aJk,
-.icon-sxakjD {
-    opacity: 1;
-}
-
-.colorSelectedText-1y4Wvs, 
-.colorSelectedVoice-Xcb_9R {
-  color: orange;
+.theme-dark .name-3_Dsmg {
+color: rgba(255,255,255,0.3);
 }
 
 
-.colorLockedText-1VRkPt, 
-.colorLockedVoice-2UlBjl {
-   color: #DC1414;
-}
 
-.colorConnectedText-1c_uzY, 
-.colorConnectedVoice-3kyvUN, 
-.colorDefaultText-oas-QM, 
-.colorDefaultVoice-3wYlhb, 
-.colorHoveredText-OZnAgu, 
-.colorHoveredVoice-1kucsK, 
-.colorUnreadText-2t7XRb, 
-.colorUnreadVoice-137o4S {
-   color: white;
-}
 
-.background-2OVjk_ {
-    opacity: .7;
-}
 
-.contentUnreadText-2vNnZc, 
-.contentUnreadVoice-1dijOt {
+
+
+
+
+
+
+
+
+
+
+
+
+.theme-dark .wrapper-1ucjTd.modeUnread-1zpFdA .content-3at_AU {
   background: linear-gradient(35deg, rgba(0,0,0,0) 80%, rgba(213,255,0,0.8) 100%);
 }
 
-.contentConnectedVoice-qL-YrL:active, 
-.contentHoveredText-2D9B-x, 
-.contentHoveredVoice-3p_NEO:active, 
-.contentSelectedVoice-1WDIBM:active {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background: linear-gradient(35deg, rgba(0,0,0,0) 80%, rgba(0,226,255,0.8) 100%);
 }
 
-.contentSelectedText-3wUhMi, 
-.contentSelectedVoice-1WDIBM {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
     background: linear-gradient(35deg, rgba(123,26,255,0) 60%, rgba(255,0,0,0.8) 100%, rgba(255,177,0,0.8) 100%);
 }
 
-.contentDefaultText-3vZplL, 
-.contentDefaultVoice-2ko43i {
-  background: linear-gradient(35deg, rgba(0,0,0,0) 80%, rgba(144,144,144,0.5) 100%);
-}
 
-.content-20Aix8 {
+
+.content-3at_AU {
     border-radius: 0;
 }
 
@@ -1125,7 +1019,7 @@
     color: white;
 }
 
-.theme-dark .iconBadge-2dji3k {
+.theme-dark .iconBadge-qZ4Ksk {
     border-color: transparent;
     background-color: rgb(255,255,255);
 }
@@ -1257,7 +1151,7 @@
 
 .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .description-2ug5H_ .filename-ovv3c5 {
     position: absolute;
-    top: 298px;
+    top: 98px;
     left: 0;
     z-index: 1;
 }
@@ -1513,7 +1407,7 @@
     fill: white;
 }
 
-.wrapper-2NJDcI {
+.users-i_3-kL, .total-3tKGEB {
     background-color: rgba(255,255,255,0.32);
     border-radius: 0;
     color: white;
@@ -1687,7 +1581,7 @@
     color: white;
 }
 
-.theme-dark .topPill-30KHOu .itemSelected-1qLhcL {
+.theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .theme-dark .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ:hover {
     background-color: rgba(36, 131, 205,0.6);
     color: white;
 }
@@ -1895,7 +1789,7 @@
     color: #157CDD !important;
 }
 
-.theme-dark .side-8zPYf6 .itemDefault-3Jdr52:hover[style*="color: rgb(114, 137, 218); background-color: rgba(114, 137, 218, 0.0980392);"], .theme-dark .side-8zPYf6 .itemHover-EnbcjT:hover[style*="color: rgb(114, 137, 218); background-color: rgba(114, 137, 218, 0.0980392);"] {
+.theme-dark .side-8zPYf6 .themed-OHr7kt.item-PXvHYJ:hover[style*="color: rgb(114, 137, 218); background-color: rgba(114, 137, 218, 0.0980392);"], .theme-dark .topPill-30KHOu .themed-OHr7kt.item-PXvHYJ:hover[style*="color: rgb(114, 137, 218); background-color: rgba(114, 137, 218, 0.0980392);"] {
      color: white !important;
      background-color: #157CDD !important;
 }
@@ -2230,4 +2124,8 @@
 .theme-dark .queryContainer-RKFJW- {
     border-bottom-color: transparent;
     color: white
+}
+
+.theme-dark .button-OhfaWu {
+     background-color: transparent !important;
 }
